--- a/Styles/botao.css
+++ b/Styles/botao.css
@@ -16,7 +16,7 @@ button.botao__flutuante-cadastro span{
     position: absolute;
     width: 16px;
     height: 16px;
-    background-image: url('Imagens/maisicone.svg');
+    background-image: url("Imagens/maisicone.svg");
     background-position: center;
     background-repeat: no-repeat;
     top: 50%;
@@ -98,7 +98,7 @@ button.botao__flutuante-item span.local{
 }
   
 button.botao__flutuante-item span.remoto{
-    background-image: url('Imagens/Camera.svg');
+    background-image: url("Imagens/Camera.svg");
     background-position: center center; 
     background-repeat: no-repeat;
 }
